add field, cooperation entity